Anpassungen an der index.css vorgenommen

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -490,7 +490,7 @@ button {
 }
 
 a {
-  color: #fc9a3f !important;
+  color: #fff !important;
   font-weight: 500 !important;
   text-decoration: underline !important;
 }
