--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -517,3 +517,7 @@ a {
     color: white !important;
 }
 
+.prose :where(strong):not(:where([class~=not-prose],[class~=not-prose] *)) {
+    color: white !important;
+    font-weight: 600 !important;
+}
