--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -495,12 +495,53 @@ a {
   text-decoration: underline !important;
 }
 
-.prose :where(strong):not(:where([class~=not-prose],
-[class~=not-prose] *)) {
-color:#ffffff !important;
-font-weight:600
+.prose :where(.prose>ol>li>:last-child):not(:where([class~=not-prose],[class~=not-prose] *)) {
+    margin-bottom: 1.25em;
+    color: #fff !important;
+}
+
+.prose :where(strong):not(:where([class~=not-prose],[class~=not-prose] *)) {
+    color: white !important;
+    font-weight: 600;
 }
 
 .prose {
-  color: #fff !important;
+    --tw-prose-body: #374151;
+    --tw-prose-headings: #fff !important;
+    --tw-prose-lead: #4b5563;
+    --tw-prose-links: #fff !important;
+    --tw-prose-bold: #fff !important;
+    --tw-prose-counters: #6b7280;
+    --tw-prose-bullets: #d1d5db;
+    --tw-prose-hr: #e5e7eb;
+    --tw-prose-quotes: #fff !important;
+    --tw-prose-quote-borders: #e5e7eb;
+    --tw-prose-captions: #6b7280;
+    --tw-prose-kbd: #fff !important;
+    --tw-prose-kbd-shadows: 17 24 39;
+    --tw-prose-code: #111827;
+    --tw-prose-pre-code: #e5e7eb;
+    --tw-prose-pre-bg: #1f2937;
+    --tw-prose-th-borders: #d1d5db;
+    --tw-prose-td-borders: #e5e7eb;
+    --tw-prose-invert-body: #d1d5db;
+    --tw-prose-invert-headings: #fff;
+    --tw-prose-invert-lead: #9ca3af;
+    --tw-prose-invert-links: #fff;
+    --tw-prose-invert-bold: #fff;
+    --tw-prose-invert-counters: #9ca3af;
+    --tw-prose-invert-bullets: #4b5563;
+    --tw-prose-invert-hr: #374151;
+    --tw-prose-invert-quotes: #f3f4f6;
+    --tw-prose-invert-quote-borders: #374151;
+    --tw-prose-invert-captions: #9ca3af;
+    --tw-prose-invert-kbd: #fff;
+    --tw-prose-invert-kbd-shadows: 255 255 255;
+    --tw-prose-invert-code: #fff;
+    --tw-prose-invert-pre-code: #d1d5db;
+    --tw-prose-invert-pre-bg: rgba(0, 0, 0, .5);
+    --tw-prose-invert-th-borders: #4b5563;
+    --tw-prose-invert-td-borders: #374151;
+    font-size: 1rem;
+    line-height: 1.75;
 }
